# CPP-Lab2

./: .gitignore  CMakeLists.txt  README.md
Laboration_1/include/: Lab1.h
Laboration_1/src/: Lab1.cpp
Laboration_2/include/: Address.cpp  Address.h  Name.cpp  Name.h  Person.cpp  Person.h
Laboration_2/src/: AddressTest.cpp  Lab2.cpp  NameTest.cpp
Laboration_3/include/: Address.cpp  Address.h  Name.h  Person.cpp  Person.h  PersonList.h  UserInterface.h
Laboration_3/src/: Name.cpp  PersonList.cpp  UserInterface.cpp  lab3.cpp
Laboration_4/include/: IntArray.cpp  IntArray.h
Laboration_4/src/: lab4.cpp
Laboration_5/include/: Lab1.h
Laboration_5/src/: lab5.cpp
Project/include/: proj.h
Project/src/: main.cpp
